--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -102,6 +102,40 @@
             </div>
         </section>
     </div>
+    
+    <div class="about-us">
+        <div class="container">
+            <div class="about-us-title">
+                <h2>Happiness does not come from  doing easy work </h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta repudiandae porro pariatur delectus ratione aliquid omnis, possimus fugit iusto suscipit voluptatum amet dolores eius obcaecati beatae nemo perferendis eveniet quo.</p>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="single-about-service-list">
+                        <div class="about-us-icon">
+                            <i class="fa-solid fa-diamond"></i>
+                        </div>
+                        <h3>Pixel perfect desing</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur officia vero fuga </p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="single-about-service-list">
+                        <div class="about-us-icon">
+                            <i class="fa-solid fa-shield"></i>
+                        </div>
+                        <h3>Awesome support</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur officia vero fuga  </p>
+                    </div>
+                </div>
+                    <div class="shadow-gallery">
+                        <img class="img-style" src="Images/about-us-1.jpg" alt="">
+                        <img class="img-style" src="Images/about-us-2.jpg" alt="">
+                        <img class="img-style" src="Images/about-us-3.jpg" alt="">
+                    </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="jquery-circle-progress/circle-progress.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
