--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -141,45 +141,41 @@
         </div>
     </div>
 
-    <!-- <div class="service-section">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="service-img">
-                    <img src="Images/service-bg.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="single-service-item">
-                    <div class="service-icon">
-                        <i class="fa fa-star"></i>
+    <div class="service-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="service-img">
+                        <img src="Images/service-bg.jpg" alt="">
                     </div>
-                    <h3>digital marketing</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolorum vero, consequuntur nostrum velit tempora soluta quo nisi alias adipisci?</p>
                 </div>
-                <div class="single-service-item">
-                    <div class="service-icon">
+                <div class="col-md-6">
+                    <div class="single-service-item">
                         <i class="fa fa-star"></i>
+                        <h3>digital marketing</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolorum vero, consequuntur nostrum velit tempora soluta quo nisi alias adipisci?</p>
                     </div>
-                    <h3>digital marketing</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolorum vero, consequuntur nostrum velit tempora soluta quo nisi alias adipisci?</p>
-                </div>
-                <div class="single-service-item">
-                    <div class="service-icon">
+                    <div class="single-service-item">
                         <i class="fa fa-star"></i>
+                        <h3>digital marketing</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolorum vero, consequuntur nostrum velit tempora soluta quo nisi alias adipisci?</p>
                     </div>
-                    <h3>digital marketing</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolorum vero, consequuntur nostrum velit tempora soluta quo nisi alias adipisci?</p>
-                </div>
-                <div class="single-service-item">
-                    <div class="service-icon">
+                    <div class="single-service-item">
                         <i class="fa fa-star"></i>
+                        <h3>digital marketing</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolorum vero, consequuntur nostrum velit tempora soluta quo nisi alias adipisci?</p>
                     </div>
-                    <h3>digital marketing</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolorum vero, consequuntur nostrum velit tempora soluta quo nisi alias adipisci?</p>
+                    <div class="single-service-item">
+                        <i class="fa fa-star"></i>
+                        <h3>digital marketing</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolorum vero, consequuntur nostrum velit tempora soluta quo nisi alias adipisci?</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
+
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="jquery-circle-progress/circle-progress.min.js"></script>
