--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -175,6 +175,53 @@
         </div>
     </div>
 
+    <div class="our-skill-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <div class="our-skill-title">
+                        <h2>Our Skills </h2>
+                        <p>The Rangers needed a jolt for their first home game of their second
+                            series against the Ottawa Senators. Turning </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="single-our-skill-circle-progressbar">
+                        <div class="circle-progress-wrap">
+                            <div id="web-progressbar">
+                                <span class="progressbar-parcentage"></span>
+                            </div>
+                        </div>
+                        <h3>web design</h3>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-our-skill-circle-progressbar">
+                        <div class="circle-progress-wrap">
+                            <div id="graphic-progressbar">
+                                <span class="progressbar-parcentage"></span>
+                            </div>
+                        </div>
+                        <h3>graphic design</h3>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="single-our-skill-circle-progressbar">
+                        <div class="circle-progress-wrap">
+                            <div id="digital-progressbar">
+                                <span class="progressbar-parcentage"></span>
+                            </div>
+                        </div>
+                        <h3>digital marketing</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
