--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -222,6 +222,26 @@
         </div>
     </div>
 
+    <div class="cta">
+        <div class="cta-section cta-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="cta-title">
+                            <h2>Want to work with us ?  Just say hello.</h2>
+                            <p>Writers and stars of Veep have responded incredulously to the news an Australian 
+                                politician required stitches after knocking himself unconscious .</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="cta-btn text-right">
+                            <a href="" class="cta-border-btn">Say hello to us</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
