--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -234,8 +234,62 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="cta-btn text-right">
+                        <div class="cta-btn text-center">
                             <a href="" class="cta-border-btn">Say hello to us</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="project-section">
+        <div class="project-info">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 offset-md-3 text-center">
+                        <div class="project-title">
+                            <h2>Our Skill</h2>
+                            <p>The Rangers needed a jolt for their first home game of their second
+                                series against the Ottawa Senators. Turning  </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 ">
+                        <div class="portfolio-list">
+                            <div class="single-portfolio-item portfolio-bg-1 large-bg">
+                                <div class="portfolio-hover">
+                                    <div class="project-icon">
+                                        <i class="fa-solid fa-eye"></i>
+                                         <p>Project Design</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single-portfolio-item portfolio-bg-2 medium-bg">
+                                <div class="portfolio-hover">
+                                    <div class="project-icon">
+                                        <i class="fa-solid fa-eye"></i>
+                                         <p>Project Design</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single-portfolio-item portfolio-bg-3 small-bg">
+                                <div class="portfolio-hover">
+                                    <div class="project-icon">
+                                        <i class="fa-solid fa-eye"></i>
+                                         <p>Project Design</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="single-portfolio-item portfolio-bg-4 small-bg">
+                                <div class="portfolio-hover">
+                                    <div class="project-icon">
+                                        <i class="fa-solid fa-eye"></i>
+                                         <p>Project Design</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
