--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -296,6 +296,99 @@
             </div>
         </div>
     </div>
+
+    <div class="section-team listing-carousel-wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <div class="section-title">
+                        <h2>Our Team</h2>
+                        <p>The Rangers needed a jolt for their first home game of their second
+                            series against the Ottawa Senators. Turning  </p>
+                    </div>
+                </div>
+            </div>
+
+            <section id="owl-2">
+               <div class="row">
+                    <div class="col-md-12">
+                        <div class="owl-carousel slid-area owl-theme">
+                              <div class="item">
+                                 <div class="single-listing-box">
+                                       <div class="radious-bg">
+                                          <img src="Images/team-bg-1.jpg" class="rounded-bg" alt="">
+                                       </div>
+                                       <h3>Deway Gross</h3>
+                                       <span>Cretive Head</span>
+                                       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cum optio sapiente. Asperiores, nobis velit.</p>
+                                 </div>
+                             </div>
+                             <div class="item">
+                                <div class="single-listing-box">
+                                     <div class="radious-bg">
+                                        <img src="Images/team-bg-2.jpg" class="rounded-bg " alt="">
+                                     </div>
+                                     <h3>Venessa Fisher</h3>
+                                     <span>Laravel Based DEvoloper</span>
+                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cum optio sapiente. Asperiores, nobis velit.</p>
+                                </div>
+                             </div>
+                             <div class="item">
+                                <div class="single-listing-box">
+                                     <div class="radious-bg">
+                                        <img src="Images/team-bg-3.jpg" class="rounded-bg" alt="">
+                                     </div>
+                                     <h3>Shahriar Hossain</h3>
+                                     <span>UI Design</span>
+                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cum optio sapiente. Asperiores, nobis velit.</p>
+                                </div>
+                             </div>
+                             <div class="item">
+                                <div class="single-listing-box">
+                                     <div class="radious-bg">
+                                        <img src="Images/team-bg-1.jpg" class="rounded-bg" alt="">
+                                     </div>
+                                     <h3>Deway Gross</h3>
+                                     <span>Cretive Head</span>
+                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cum optio sapiente. Asperiores, nobis velit.</p>
+                                </div>
+                             </div>
+                             <div class="item">
+                                <div class="single-listing-box">
+                                     <div class="radious-bg">
+                                        <img src="Images/team-bg-1.jpg" class="rounded-bg" alt="">
+                                     </div>
+                                     <h3>Deway Gross</h3>
+                                     <span>Cretive Head</span>
+                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cum optio sapiente. Asperiores, nobis velit.</p>
+                                </div>
+                             </div>
+                             <div class="item">
+                              <div class="single-listing-box">
+                                   <div class="radious-bg">
+                                      <img src="Images/team-bg-1.jpg" class="rounded-bg" alt="">
+                                   </div>
+                                   <h3>Deway Gross</h3>
+                                   <span>Cretive Head</span>
+                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cum optio sapiente. Asperiores, nobis velit.</p>
+                              </div>
+                           </div>
+                           <div class="item">
+                              <div class="single-listing-box">
+                                   <div class="radious-bg">
+                                      <img src="Images/team-bg-1.jpg" class="rounded-bg" alt="">
+                                   </div>
+                                   <h3>Deway Gross</h3>
+                                   <span>Cretive Head</span>
+                                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cum optio sapiente. Asperiores, nobis velit.</p>
+                              </div>
+                           </div>
+                        </div>
+                    </div>
+               </div>
+            </section>   
+        </div>
+    </div>
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
