--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -383,12 +383,137 @@
                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cum optio sapiente. Asperiores, nobis velit.</p>
                               </div>
                            </div>
+                           <div class="item">
+                            <div class="single-listing-box">
+                                 <div class="radious-bg">
+                                    <img src="Images/team-bg-1.jpg" class="rounded-bg" alt="">
+                                 </div>
+                                 <h3>Deway Gross</h3>
+                                 <span>Cretive Head</span>
+                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui cum optio sapiente. Asperiores, nobis velit.</p>
+                            </div>
+                         </div>
                         </div>
                     </div>
                </div>
             </section>   
         </div>
     </div>
+
+    <div class="testimonial-section testimonial-bg">
+        <div class="container">
+           <div class="row">
+              <div class="col-md-6 offset-md-3 text-center">
+                 <div class="section-title">
+                    <h2>Our Team</h2>
+                    <p>The Rangers needed a jolt for their first home game of their second
+                        series against the Ottawa Senators. Turning  </p>
+                </div>
+              </div>
+           </div>
+  
+           <section id="owl-3">
+              <div class="row">
+                 <div class="col-md-12">
+                    <div class="owl-carousel testimonial-slide owl-theme">
+                       <div class="item">
+                          <div class="single-testimonial-list">
+                             <div class="tesimonial-info">
+                                <span class="hero-5">”</span>
+                                <p class="demo"><b>“ Writers and stars of Veep have responded incred
+                                   the news an Australian politician required stitches 
+                                  after knocking himself unconscious while laugh
+                                  the new season. ”</b></p>
+                                  <h5>Brian Collins</h5>
+                                  <p>Copaco</p>
+                             </div>
+                          </div>
+                       </div>
+                       <div class="item">
+                          <div class="single-testimonial-list">
+                             <div class="tesimonial-info">
+                                <span class="hero-5">”</span>
+                                <p class="demo"><b>“ Writers and stars of Veep have responded incred
+                                   the news an Australian politician required stitches 
+                                  after knocking himself unconscious while laugh
+                                  the new season. ”</b></p>
+                                  <h5>Brian Collins</h5>
+                                  <p>Copaco</p>
+                             </div>
+                          </div>
+                       </div>
+                       <div class="item">
+                          <div class="single-testimonial-list">
+                             <div class="tesimonial-info">
+                                <span class="hero-5">”</span>
+                                <p class="demo"><b>“ Writers and stars of Veep have responded incred
+                                   the news an Australian politician required stitches 
+                                  after knocking himself unconscious while laugh
+                                  the new season. ”</b></p>
+                                  <h5>Brian Collins</h5>
+                                  <p>Copaco</p>
+                             </div>
+                          </div>
+                       </div>
+                       <div class="item">
+                          <div class="single-testimonial-list">
+                             <div class="tesimonial-info">
+                                <span class="hero-5">”</span>
+                                <p class="demo"><b>“ Writers and stars of Veep have responded incred
+                                   the news an Australian politician required stitches 
+                                  after knocking himself unconscious while laugh
+                                  the new season. ”</b></p>
+                                  <h5>Brian Collins</h5>
+                                  <p>Copaco</p>
+                             </div>
+                          </div>
+                       </div>
+                       <div class="item">
+                          <div class="single-testimonial-list">
+                             <div class="tesimonial-info">
+                                <span class="hero-5">”</span>
+                                <p class="demo"><b>“ Writers and stars of Veep have responded incred
+                                   the news an Australian politician required stitches 
+                                  after knocking himself unconscious while laugh
+                                  the new season. ”</b></p>
+                                  <h5>Brian Collins</h5>
+                                  <p>Copaco</p>
+                             </div>
+                          </div>
+                       </div>
+                       <div class="item">
+                          <div class="single-testimonial-list">
+                             <div class="tesimonial-info">
+                                <span class="hero-5">”</span>
+                                <p class="demo"><b>“ Writers and stars of Veep have responded incred
+                                   the news an Australian politician required stitches 
+                                  after knocking himself unconscious while laugh
+                                  the new season. ”</b></p>
+                                  <h5>Brian Collins</h5>
+                                  <p>Copaco</p>
+                             </div>
+                          </div>
+                       </div>
+                       <div class="item">
+                          <div class="single-testimonial-list">
+                             <div class="tesimonial-info">
+                                <span class="hero-5">”</span>
+                                <p class="demo"><b>“ Writers and stars of Veep have responded incred
+                                   the news an Australian politician required stitches 
+                                  after knocking himself unconscious while laugh
+                                  the new season. ”</b></p>
+                                  <h5>Brian Collins</h5>
+                                  <p>Copaco</p>
+                             </div>
+                          </div>
+                       </div>
+                    </div>
+                 </div>
+              </div>
+           </section>
+        </div>
+        
+     </div>
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
