--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -515,6 +515,29 @@
         
      </div>
     
+     <div class="brand-section">
+        <div class="container">
+           <div class="row">
+              <div class="col-md-12">
+                 <div class="single-brand-list text-left">
+                    <img  src="Images/brand-bg-1.png" alt="">
+                 </div>
+                 <div class="single-brand-list">
+                    <img src="Images/brand-bg-2.png" alt="">
+                 </div>
+                 <div class="single-brand-list">
+                    <img src="Images/brand-bg-3.png" alt="">
+                 </div>
+                 <div class="single-brand-list">
+                    <img src="Images/brand-bg-4.png" alt="">
+                 </div>
+                 <div class="single-brand-list text-right">
+                    <img src="Images/brand-bg-5.png" alt="">
+                 </div>
+              </div>
+           </div>
+        </div>
+     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="jquery-circle-progress/circle-progress.min.js"></script>
