--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -539,6 +539,52 @@
         </div>
      </div>
 
+     <div class="footer-section">
+        <div class="container">
+           <div class="row">
+              <div class="col-md-4 site p">
+                 <div class="site-logo">
+                    <a href="">twist</a>
+                 </div>
+                 <p class="demo-2">Saudi Arabia has been accused of using anti-terror laws
+                    to suppress free expression and failing to carry out 
+                    independent inquiries into its Yemen.</p>
+              </div>
+              <div class="col-md-2">
+                 <div class="menu">
+                    <ul>
+                       <li><a href="">About</a></li>
+                       <li><a href="">Services</a></li>
+                       <li><a href="">Team</a></li>
+                       <li><a href="">Privacy Policy</a></li>
+                    </ul>
+                 </div>
+              </div>
+              <div class="col-md-2">
+                 <div class="about">
+                    <ul>
+                       <li><a href="">Tesimonial</a></li>
+                       <li><a href="">Support</a></li>
+                       <li><a href="">Contact Us</a></li>
+                       <li><a href="">Blog</a></li>
+                    </ul>
+                 </div>
+              </div>
+              <div class="col-md-4 ">
+                 <h5 class="follow-title">Follow Us</h5>
+                 <div class="follow">
+                    <ul>
+                       <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                       <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                       <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+                       <li><a href=""><i class="fa-brands fa-pinterest"></i></a></li>
+                    </ul>
+                 </div>
+              </div>
+           </div>
+        </div>
+     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="jquery-circle-progress/circle-progress.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
