--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -111,6 +111,22 @@
                         <h2>Happiness does not come from  doing easy work </h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta repudiandae porro pariatur delectus ratione aliquid omnis, possimus fugit iusto suscipit voluptatum amet dolores eius obcaecati beatae nemo perferendis eveniet quo.</p>
                     </div>
+                    <div class="row">
+                        <div class="single-about-service-list">
+                            <div class="about-us-icon">
+                                <i class="fa-solid fa-shield"></i>
+                            </div>
+                            <h3>Awesome support</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur officia vero fuga  </p>
+                        </div>
+                        <div class="single-about-service-list">
+                            <div class="about-us-icon">
+                                <i class="fa-solid fa-shield"></i>
+                            </div>
+                            <h3>Awesome support</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur officia vero fuga  </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="shadow-gallery">
@@ -119,24 +135,7 @@
                         <img class="img-style" src="Images/about-us-3.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="single-about-service-list">
-                        <div class="about-us-icon">
-                            <i class="fa-solid fa-shield"></i>
-                        </div>
-                        <h3>Awesome support</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur officia vero fuga  </p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="single-about-service-list">
-                        <div class="about-us-icon">
-                            <i class="fa-solid fa-shield"></i>
-                        </div>
-                        <h3>Awesome support</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur officia vero fuga  </p>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
