--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -156,6 +156,30 @@
             </div>
         </div>
     </div>
+
+    <div class="how-it-work-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="how-title">
+                        <h2>Transparency of Online Marketing <br> 
+                            Efforts from us
+                        </h2>
+                        <p>Conveniently whiteboard ubiquitous niche markets and accurate
+                            collaboration and idea-sharing. Holisticly supply client-focused
+                            models vis-a-vis B2B processes. 
+                        </p>
+                        <a href="" class="bordered-btn-how">How it works</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="how-it-work-bg">
+                        <img src="Images/how-it-work-bg.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
